# kafka-viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
assets/styles/: app.qss
assets/themes/: dark.qss  light.qss
cmake/: CompilerOptions.cmake  FindRdKafka.cmake
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt
src/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt
src/ui/widgets/: CMakeLists.txt  FlatButton.cpp  FlatButton.h
src/ui/window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ui/window/decoration/: CMakeLists.txt  TitleBar.cpp  TitleBar.h  WindowResizeHandle.cpp  WindowResizeHandle.h
